[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ad-project-ml"
version = "0.1.0"
description = "Offline ML utilities and ETL tooling for the Ad Project"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [{name = "Ad-Project ML Team"}]
dependencies = [
    "pandas==2.3.3",
    "numpy==2.1.3",
    "scikit-learn==1.6.1",
    "fastparquet==2024.11.0",
    "joblib==1.5.2",
    "pyod==2.0.2",
    "clickhouse-connect==0.7.0",
]

[project.optional-dependencies]
# Glue / Spark style integrations expect pyarrow. Keep markers so older runtimes pull
# a compatible build while newer Python versions receive the latest wheels.
glue = [
    "pyarrow>=18.0.0,<19.0.0 ; python_version >= '3.13'",
    "pyarrow>=16.1.0,<18.0.0 ; python_version < '3.13'",
]

[tool.setuptools]
packages = []
