[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "apexml"
version = "0.0.1"
description = "Apex Mediation ML pipelines and utilities"
authors = [{name = "Bel Consulting OÜ"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
include = ["ml_pipelines*"]
